--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "classnames": "^2.2.5",
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.1",
+    "nodemailer": "^4.6.5",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-moment": "^0.7.0",
